<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CartStatus" Id="{80b16640-247c-4dd4-96a5-e4b5ddf546bb}">
    <Declaration><![CDATA[TYPE ST_CartStatus :
STRUCT
	m_monitorAngle:LREAL := 0.0;
	m_armSwitch:BOOL := FALSE;
	m_clutchSwitch:BOOL := FALSE;
	m_endoscopeSwitch:BOOL := FALSE;
	m_instrumentPowerSwitch:BOOL := FALSE;
	m_monitorAdjustSwitch:BOOL := FALSE;
	m_tableAdjustSwitch:BOOL := FALSE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>